# open-deFi

./: .gitignore  Anchor.toml  Cargo.toml  buffer.json  bun.lockb  package-lock.json  package.json
client/: bun.lockb  next.config.mjs  package.json
client/app/: AlertFaucet.tsx  globals.css  layout.tsx  page.tsx
client/app/admin/: page.tsx
client/app/dashboard/: page.tsx
client/app/faucet/: page.tsx
client/components/: connect-wallet-button.tsx
client/components/dashboard/: account-summary.tsx  portfolio-cards.tsx
client/components/dashboard/tabs/: borrow.tsx  common.tsx  deposit.tsx  liquidate.tsx  repay.tsx  withdraw.tsx
client/components/faucet/: faucet-amounts.tsx  faucet-onboarding.tsx  faucet-token-card.tsx  rate-limit.tsx  tokens.ts
client/components/hooks/: useDashboardData.tsx
client/components/sections/: features.tsx  footer.tsx  hero.tsx  how-it-works.tsx  stats.tsx
client/components/ui/: fade-in.tsx  spinner.tsx
client/hooks/: use-lending.ts  use-wallet.ts
client/lib/: data.ts  format.ts  server.ts  types.ts
programs/lending-app/: Cargo.toml
programs/lending-app/src/: constants.rs  error.rs  lib.rs
programs/lending-app/src/instructions/: borrow.rs  deposit.rs  initialize_bank.rs  intialize_user.rs  liquidate.rs  mod.rs  repay.rs  shared.rs  withdraw.rs
programs/lending-app/src/state/: mod.rs
programs/lending-app/src/tests/: bankrunContextWrapper.ts  tests.test.ts
tests/: tests.test.ts
tests/fixtures/: bankrunContextWrapper.ts
